--- a/03_vars.yml
+++ b/03_vars.yml
@@ -1,3 +1,20 @@
+---
+- hosts: linuxservers
+  become: yes
+
+  vars:
+      package:
+         - httpd
+         - mariadb-server
+         - php
+         - php-mysqlnd
+
+  tasks:
+  - name: Install Packages
+    ansible.builtin.package:
+      name: "{{ package }}"
+      state: latest
+
   - name: Enable httpd service
     ansible.builtin.systemd:
       name: httpd
