--- a/04_vars.yml
+++ b/04_vars.yml
@@ -10,18 +10,8 @@
          - php-mysqlnd
 
   tasks:
-  - name: Install Packages
-    ansible.builtin.package:
-      name: "{{ package }}"
-      state: latest
 
-  - name: Enable httpd service
-    ansible.builtin.systemd:
-      name: httpd
-      state: started
-      enabled: yes
-    register: httpd_status
-
-  - name: Show Status
+  - name: Is httpd running
     debug:
-      var: httpd_status
+      msg: httpd is running
+    when: httpd_status.state == "started"
