--- a/05_vars.yml
+++ b/05_vars.yml
@@ -15,3 +15,6 @@
     debug:
       msg: httpd is running
     when: httpd_status.state == "started"
+  - name: Show Status
+    debug:
+      var: httpd_status
